--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Index page</h1>
 
-    <p>Hi Marwa, how are you today? I really like this backend stuff</p>
+    <p>Test</p>
     
   </body>
 </html>
