--- a/documentation.html
+++ b/documentation.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Index page</h1>
 
-    <p>I will add my documentation here :)</p>
+    <p>documentation here</p>
     
   </body>
 </html>
