--- a/public/documentation.html
+++ b/public/documentation.html
@@ -10,7 +10,7 @@
           <h2>Documentation - Movie API</h2>
      </header>
          <body>
-             <P>This is a movie API, which contains movie description, genre, director, image URL. 
+             <P>The following project consists of a movie API, which contains data about movies description, genre, director and image URL. 
                 The web application will provide users with access to information about different movies, directors, and genres.
                 Users will be able to sign up, update their personal information, and create a list of their favorite movies.
             </P>
@@ -86,7 +86,7 @@
                        <td>POST</td>
                        <td>-</td>
                        <td>A JSON object holding data about the users to add, structured like this { "name" : "Diego", "favorite movie" : [] } </td>
-                       <td>A JSON object holding data about the user that was added, structured like this { "name" : "Vincent", "favorite movie" : [] } including an ID </td>
+                       <td>A JSON object holding data about the user that was added, structured like this { "name" : "Diego", "favorite movie" : [] } including an ID </td>
                    </tr>
           
                    <tr class="active-row">
